# xorshift-plus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  xorshift-plus.cabal
benchmarks/micro/: micro.hs
src/Random/: XorshiftPlus.hs
tests/doctest/: Main.hs
tests/spec/Random/: XorshiftPlusSpec.hs
