cabal-version:       2.4
name:                xorshift-plus
version:             0.1.0.0

synopsis:            Simple implementation of xorshift+ PRNG
-- description:

homepage:            https://github.com/syocy/xorshift-plus
bug-reports:         https://github.com/syocy/xorshift-plus/issues

license:             BSD-3-Clause
license-file:        LICENSE

author:              OSANAI Kazuyoshi
maintainer:          osmium.k@gmail.com
-- copyright:

category:            Math

extra-source-files:  README.md
                   , CHANGELOG.md

source-repository head
  type:              git
  location:          https://github.com/syocy/xorshift-plus
              
library
  exposed-modules:     Random.XorshiftPlus
  -- other-modules:

  -- other-extensions:

  build-depends:       base ^>=4.12.0.0
                     , ghc-prim

  hs-source-dirs:      src

  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests/doctest
  build-depends:       base
                     , doctest >= 0.8
